@@ -15,6 +15,8 @@ Bug Fixes
 
 * SOLR-6853: Allow '/' characters in the text managed by Managed Resources API. (Nikita Rusetskii via Eric Pugh)
 
+* SOLR-17060: CoreContainer#create may deadlock with concurrent requests for metrics (Alex Deparvu, David Smiley)
+
 Dependency Upgrades
 ---------------------
 (No changes)
